maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:21: error: Boolean does not take parameters
  if (murGauche() && !estFaceMur())
               ^Escaper:25: error: Boolean does not take parameters
  if (!murGauche())
                ^